Added details after Maltoni's comments, continuing with summary table
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@294 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -67,6 +67,12 @@
 \let\nominalTodo\Todo
 \renewcommand\Todo[1]{\nominalTodo{\normalfont\footnotesize\sffamily\bf #1}}
 
+
+%%%Nice tables
+\usepackage{booktabs,colortbl, array}
+\usepackage{rotating}
+%%End nice tables
+
 % Prints an asterisk that takes up no horizontal space.
 % Useful in tabular environments.
 \newcommand{\hangstar}{\makebox[0pt][l]{*}}
