--- a/doc/symbols.tex
+++ b/doc/symbols.tex
@@ -108,6 +108,9 @@
 \newcommand{\spinzero}{\ensuremath{\text{spin-}0}\xspace}
 \newcommand{\spinone}{\ensuremath{\text{spin-}1}\xspace}
 \newcommand{\spintwo}{\ensuremath{\text{spin-}2}\xspace}
+\newcommand{\Spinzero}{\ensuremath{\text{Spin-}0}\xspace}
+\newcommand{\Spinone}{\ensuremath{\text{Spin-}1}\xspace}
+\newcommand{\Spintwo}{\ensuremath{\text{Spin-}2}\xspace}
 
 % math
 
