--- a/doc/tex/Conclusions.tex
+++ b/doc/tex/Conclusions.tex
@@ -21,4 +21,6 @@ Points to be made in a conclusion\Todo{write the conclusion}:
 
 \item The Appendix contains a presentation of some models that came out in our discussions that were not deemed a priority for early Run2 analyses.  However, these should be considered in the future.
 
+\input{tex/SummaryTable.tex}
+
 \end{itemize}
