more changes for peskin
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@295 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -15,7 +15,7 @@ The models considered in this Section can be divided into two categories:
 % already described in Section~\ref{subsec:MonojetLikeModels}, replacing the gluon with a boson.
  \item[V-specific simplified models] These models postulate direct couplings of new mediators
  to bosons, e.g. they couple the Higgs boson to a new vector or to a new scalar~\cite{Carpenter:2013xra,Berlin:2014cfa}. 
- \item[Models including a contact operator, where the boson is directly coupled to DM]
+ \item[Models including a SM singlet operator  including a boson pair that couples to dark matter through a contact interaction]
  Shown on the right-hand side of Figure~\ref{fig:VPlusMET_EFT},
  these models allow for a contact interaction vertex that directly couples the boson to Dark Matter~\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva,Berlin:2014cfa}.
  These models are included in this report devoted to simplified models since 
