--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -8,13 +8,14 @@
 Three benchmark simplified models \cite{Carpenter:2013xra,Berlin:2014cfa} 
 are recommended for Higgs+\MET searches:
 \begin{itemize}
-	\item A model where a leptophobic vector mediator ($Z_B^\prime$) is exchanged in the \schannel, 
-	radiates a Higgs boson and decays into two DM particles (Fig.~\ref{fig:feyn_prod_monoH} (a));
+	\item A model where a vector mediator ($Z_B^\prime$) is exchanged in the \schannel, 
+	radiates a Higgs boson, and decays into two DM particles (Fig.~\ref{fig:feyn_prod_monoH} (a)). As in Section \ref{sec:monojet_V}, we conservatively omit couplings of the $\Zprime_B to leptons.
     \item A model where a scalar mediator $S$ couples to the SM only 
-	through the SM Higgs and decays to two DM particles (Fig.~\ref{fig:feyn_prod_monoH_S});
+	through the SM Higgs and decays to two DM particles (Fig.~\ref{fig:feyn_prod_monoH_S}).
 	\item A model where a vector \Zprime is produced resonantly and decays into a Higgs boson
 	plus an intermediate heavy pseudoscalar particle $A^0$, in turn decaying into two DM particles (Fig. \ref{fig:feyn_prod_monoH} (b)). 
 \end{itemize}
+
 
 \begin{figure}[!h!tpd]
 	\centering
