--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -178,7 +178,7 @@ For the off-shell Dark Matter pair production, shown in Fig.\,\ref{fig:monojet_s
 there is approximately a factor 2 difference
 between the cross-sections of the samples with pure couplings is observed. As in the previous case, the samples with the same type coupling to Dark Matter are similar both in terms of cross sections and \MET shape. Since the contribution to the mediator width from Dark Matter is closed in this case, only the quark couplings define the width. Only couplings to light quarks are opened in the case of $\mMed=100$~\gev for which the differences between the partial widths of vector and axial-vector couplings are marginal. This explains the similar minimal widths for all four samples stated in Fig.\,\ref{fig:monojet_scan_VA_mMed100}.
 
-In general, the coupling to quarks is not expected to play an important role as it is only needed to produce the mediator which is confirmed by the observations above. On the contrary, the coupling to Dark Matter determines the form of the matrix element which explains the similarity of the samples with the same type Dark Matter couplings. 
+In general, the coupling to quarks is not expected to play an important role as it is only needed to produce the mediator which is confirmed by the observations above. For scalar and psuedoscalar mediators, the coupling to Dark Matter determines the form of the matrix element which explains the similarity of the samples with the same type Dark Matter couplings. 
 Based on these arguments, we recommend to consider only the models with pure vector couplings or pure axial-vector couplings.
 
 \begin{figure}
@@ -939,7 +939,7 @@ It should be noted again that this procedure is only useful when the narrow widt
 
 \subsection{\texorpdfstring{Additional considerations for $t \bar{t}$ and $b \bar{b}$+\MET signatures}{Additional considerations for ttbar/bbbar+\MET signatures}}
 
-The cross-section scaling considerations shown in~\ref{sec:monojet_scaling} still apply for this model. Here 
+The cross-section scaling considerations shown in~\ref{sec:monojet_scaling} still apply for the reactions in the scalar and psuedoscalar models with explicit $b$ and $t$ quarks. Here 
 we detail the specific studies done for the  $t\bar t$ model. 
 
 Given that the kinematics are similar for all couplings $g = \sim 1$, we recommend to generate only samples with $\gDM = \gq = 1$. It follows from this that these benchmark points should be a good
