add a few sentences for the mono-Z' model from Yang Bai
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@297 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -387,7 +387,7 @@ The presentation of the results in the $\gq$--$\gDM$ plane for fixed masses bene
 \subsection{Additional considerations for $V$+\MET{} signatures}
 \label{sec:bosonrad}
 \input{tex/EWSpecificModels_VAMediators}
-
+In addition, for the vector models considered, initial and final state radiation of a $Z'$ can occur which can appear as a narrow jet if it decays hadronically and may not be distinguishable from a QCD jet, thus accounting for some fraction of the monojet signal. The ISR and FSR of $Z'$ becomes more important at large values of the couplings~\cite{Bai:2015nfa}. 
 %%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%
